fix: prevent xmlns specificity boost from overriding text-align modifiers
The resetLegacyStyles mixin wraps .dnb-p rules under
html[xmlns='...'], giving them specificity (0,2,1). This overrides
the alignment modifier classes like .dnb-t__align--center (0,1,0)
on e-Platform where <html> has the xmlns attribute.

Split the text-align reset into a separate rule with :not()
exclusions so it yields when alignment modifiers are present.

--- a/packages/dnb-eufemia/src/style/core/reset.scss
+++ b/packages/dnb-eufemia/src/style/core/reset.scss
@@ -394,8 +394,12 @@
     // reset paragraphs
     .dnb-p {
       overflow: initial;
-      text-align: inherit;
       background-color: initial;
+    }
+    .dnb-p:not(.dnb-t__align--center):not(.dnb-t__align--left):not(
+        .dnb-t__align--right
+      ) {
+      text-align: inherit;
     }
     i {
       font-style: italic;
